# hyperliquid

./: package.json  static-spot.json  static.json
.github/workflows/: main.yml
app/: .gitignore  .prettierrc  README.md  eslint.config.js  index.html  package.json  schema.sql
app-new-strategy/: .gitignore  .prettierrc  README.md  package.json  tsconfig.json  vite.config.ts
app-new-strategy/src/: App.tsx  context.tsx  types.ts  utils.ts
app-new-strategy/src-tauri/: Cargo.toml  tauri.conf.json
app-new-strategy/src-tauri/src/: main.rs  types.rs
app-new-strategy/src-tauri/src/actions/: account.rs  exchange.rs  info.rs  mod.rs
app-new-strategy/src-tauri/src/high_level/: batch.rs  info.rs  logs.rs  mod.rs  unit.rs
app-new-strategy/src-tauri/src/services/: unit.rs
app-new-strategy/src-tauri/src/utils/: convert_types.rs  mod.rs  num.rs  parsers.rs  rand.rs
app-new-strategy/src/components/: ChipWithCopy.tsx
app-new-strategy/src/components/AddAccountModal/: index.tsx
app-new-strategy/src/components/AddProxyModal/: index.tsx
app-new-strategy/src/components/CreateBatchModal/: index.tsx
app-new-strategy/src/components/CreateUnitModal/: index.tsx
app-new-strategy/src/components/EnhancedTableHead/: index.tsx
app-new-strategy/src/components/ImportUnitsModal/: index.tsx
app-new-strategy/src/components/Login/: index.tsx
app-new-strategy/src/components/Table/: index.tsx
app-new-strategy/src/db/: SUPABASE_DB.ts
app-new-strategy/src/tabs/Accounts/: index.tsx
app-new-strategy/src/tabs/Batches/: Batch.tsx  index.tsx
app-new-strategy/src/tabs/Logs/: index.tsx
app/src/: App.tsx  context.tsx  logsContext.tsx  main.tsx  themeContext.tsx  types.ts  utils.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/local_db/: account_proxy.txt  accounts.txt  proxy.txt
app/src-tauri/src/: hyper_types.rs  main.rs  types.rs
app/src-tauri/src/actions/: account.rs  exchange.rs  info.rs  mod.rs
app/src-tauri/src/dto_types/: user_state.rs
app/src-tauri/src/high_level/: batch.rs  info.rs  logs.rs  mod.rs  trader.rs  unit.rs  units.rs
app/src-tauri/src/services/: mod.rs  trader.rs  unit.rs
app/src-tauri/src/utils/: convert_types.rs  local_db.rs  mod.rs  num.rs  parsers.rs  str.rs
app/src/components/: ThemeSwitch.tsx
app/src/db/: SUPABASE_DB.ts
app/src/tabs/: index.ts
bot/: Cargo.toml
bot/src/: main.rs  types.rs
bot/src/actions/: exchange.rs  info.rs
bot/src/high_level/: batch.rs
bot/src/utils/: mod.rs  num.rs  parsers.rs
hl-rust-sdk/src/: meta.rs
hl-rust-sdk/src/info/: sub_structs.rs
(+30 files in other folders)
