[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
env_logger = "0.11.3"
ethers = { version = "0.17.0", features = ["eip712", "abigen"] }
hyperliquid_rust_sdk = "0.3.0"
itertools = "0.12.1"
log = "0.4.21"
reqwest = "0.11.18"
tokio = "1.37.0"
uuid = { version = "1.8.0", features = ["v4"] }
