[package]
name = "app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15.0"
env_logger = "0.11.3"
ethers = { version = "0.17.0", features = ["eip712", "abigen"] }
hyperliquid_rust_sdk = "0.3.0"
itertools = "0.12.1"
log = "0.4.21"
reqwest = "0.11.18"
tokio = "1.37.0"
uuid = { version = "1.8.0", features = ["v4"] }
rust_decimal = "1.35.0"
async-recursion = "1.1.0"
fern = { version = "0.6.2", features = ["colored"] }
chrono = "0.4.37"


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
